# Ocean-Drift-Diffusion

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/sample_npz/: sample_000.npz  sample_001.npz  sample_002.npz  sample_003.npz
docs/: DATASETS.md  EVALUATION.md  REPRODUCIBILITY.md
src/odd/: __init__.py  data.py  diffusion.py  eval.py  infer.py  model.py  train.py  utils.py  viz.py
tests/: test_smoke.py
